# opengl_test_cmake

./: CMakeLists.txt  main.cc
